--- a/books/Base.lproj/Main.storyboard
+++ b/books/Base.lproj/Main.storyboard
@@ -86,63 +86,37 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e66-Vw-3r6">
-                                                <rect key="frame" x="16" y="80.5" width="343" height="150"/>
-                                                <subviews>
-                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rpi-a6-1bE">
-                                                        <rect key="frame" x="0.0" y="0.0" width="343" height="66.5"/>
-                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
-                                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                    </textView>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6W7-eQ-ABE">
-                                                        <rect key="frame" x="0.0" y="0.0" width="100" height="150"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="100" id="Nzc-Z0-wQa"/>
-                                                            <constraint firstAttribute="height" constant="150" id="Xvo-2O-1UF"/>
-                                                        </constraints>
-                                                    </imageView>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTz-8U-5Qg">
-                                                        <rect key="frame" x="291" y="66.5" width="52" height="20"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="52" id="SlW-hH-Adp"/>
-                                                            <constraint firstAttribute="height" constant="20" id="cqd-75-ITQ"/>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleCaption2"/>
-                                                        <state key="normal" title="See More"/>
-                                                        <connections>
-                                                            <action selector="moreButtonPressed:" destination="svF-c1-e4g" eventType="touchUpInside" id="lB8-Ga-9pQ"/>
-                                                        </connections>
-                                                    </button>
-                                                </subviews>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mid-NB-7DT">
+                                                <rect key="frame" x="124" y="76" width="235" height="150"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
+                                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YTX-8q-xHR">
+                                                <rect key="frame" x="16" y="76" width="100" height="150"/>
                                                 <constraints>
-                                                    <constraint firstItem="Rpi-a6-1bE" firstAttribute="top" secondItem="e66-Vw-3r6" secondAttribute="top" id="8Cg-EA-oqe"/>
-                                                    <constraint firstItem="6W7-eQ-ABE" firstAttribute="top" secondItem="e66-Vw-3r6" secondAttribute="top" id="BAh-Ru-LNy"/>
-                                                    <constraint firstAttribute="leading" secondItem="Rpi-a6-1bE" secondAttribute="leading" id="KNW-mk-b1X"/>
-                                                    <constraint firstAttribute="trailing" secondItem="wTz-8U-5Qg" secondAttribute="trailing" id="M2E-NK-8tx"/>
-                                                    <constraint firstItem="wTz-8U-5Qg" firstAttribute="top" secondItem="Rpi-a6-1bE" secondAttribute="bottom" id="WXZ-dM-1JX"/>
-                                                    <constraint firstAttribute="bottom" secondItem="wTz-8U-5Qg" secondAttribute="bottom" priority="100" id="bRz-A1-RDu"/>
-                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="150" id="fQt-It-rgP"/>
-                                                    <constraint firstItem="6W7-eQ-ABE" firstAttribute="leading" secondItem="e66-Vw-3r6" secondAttribute="leading" id="jsM-5K-x2a"/>
-                                                    <constraint firstAttribute="trailing" secondItem="Rpi-a6-1bE" secondAttribute="trailing" id="ovG-tW-dlc"/>
+                                                    <constraint firstAttribute="width" constant="100" id="3Q2-3B-6zf"/>
+                                                    <constraint firstAttribute="height" constant="150" id="apa-Op-VGz"/>
                                                 </constraints>
-                                            </view>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" constant="16" id="50y-oK-ZCX"/>
-                                            <constraint firstItem="e66-Vw-3r6" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="Ahq-4Q-wY1"/>
+                                            <constraint firstItem="mid-NB-7DT" firstAttribute="leading" secondItem="YTX-8q-xHR" secondAttribute="trailing" constant="8" id="8Y2-oN-HzT"/>
                                             <constraint firstItem="Bmm-uv-eym" firstAttribute="top" secondItem="Qxc-PW-YFe" secondAttribute="top" constant="16" id="B28-tG-g19"/>
-                                            <constraint firstItem="e66-Vw-3r6" firstAttribute="leading" secondItem="Bmm-uv-eym" secondAttribute="leading" id="CMT-gW-hXC"/>
-                                            <constraint firstItem="POr-2Z-MIa" firstAttribute="top" secondItem="e66-Vw-3r6" secondAttribute="bottom" constant="8" id="ECf-Iq-OxU"/>
-                                            <constraint firstItem="e66-Vw-3r6" firstAttribute="top" secondItem="pRN-sy-kyO" secondAttribute="bottom" constant="12" id="bdG-wh-iK6"/>
+                                            <constraint firstItem="mid-NB-7DT" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="DJG-0J-i7F"/>
+                                            <constraint firstItem="POr-2Z-MIa" firstAttribute="top" secondItem="YTX-8q-xHR" secondAttribute="bottom" constant="12" id="Dzt-ce-0Ih"/>
+                                            <constraint firstItem="YTX-8q-xHR" firstAttribute="leading" secondItem="Bmm-uv-eym" secondAttribute="leading" id="RqH-wS-GxV"/>
+                                            <constraint firstItem="YTX-8q-xHR" firstAttribute="top" secondItem="mid-NB-7DT" secondAttribute="top" id="WUF-tz-Knt"/>
+                                            <constraint firstItem="YTX-8q-xHR" firstAttribute="height" secondItem="mid-NB-7DT" secondAttribute="height" id="cCm-5G-Be4"/>
                                             <constraint firstAttribute="bottom" secondItem="POr-2Z-MIa" secondAttribute="bottom" constant="16" id="e4E-Qe-gEy"/>
                                             <constraint firstItem="POr-2Z-MIa" firstAttribute="leading" secondItem="Bmm-uv-eym" secondAttribute="leading" id="eN3-hm-tkp"/>
                                             <constraint firstItem="pRN-sy-kyO" firstAttribute="leading" secondItem="Bmm-uv-eym" secondAttribute="leading" id="eqm-jY-aXy"/>
                                             <constraint firstItem="Bmm-uv-eym" firstAttribute="leading" secondItem="Qxc-PW-YFe" secondAttribute="leading" constant="16" id="j77-T3-DlQ"/>
+                                            <constraint firstItem="YTX-8q-xHR" firstAttribute="top" secondItem="pRN-sy-kyO" secondAttribute="bottom" constant="8" id="lSn-DZ-aI5"/>
                                             <constraint firstItem="pRN-sy-kyO" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="pVn-a6-PSl"/>
                                             <constraint firstItem="POr-2Z-MIa" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="ub4-fk-OSI"/>
                                             <constraint firstItem="pRN-sy-kyO" firstAttribute="top" secondItem="Bmm-uv-eym" secondAttribute="bottom" constant="2" id="y6J-fH-GKz"/>
@@ -176,9 +150,8 @@
                     </navigationItem>
                     <connections>
                         <outlet property="authorsLabel" destination="pRN-sy-kyO" id="J5g-g2-3kf"/>
-                        <outlet property="descriptionTextView" destination="Rpi-a6-1bE" id="3b5-gn-miD"/>
-                        <outlet property="imageView" destination="6W7-eQ-ABE" id="ztr-mL-8Jd"/>
-                        <outlet property="moreDescriptionButton" destination="wTz-8U-5Qg" id="yrz-Kt-2ZW"/>
+                        <outlet property="descriptionTextView" destination="mid-NB-7DT" id="R1o-rG-fOa"/>
+                        <outlet property="imageView" destination="YTX-8q-xHR" id="zj3-Wi-8EJ"/>
                         <outlet property="readStateContainerView" destination="POr-2Z-MIa" id="VmA-YN-Yga"/>
                         <outlet property="readStateLabel" destination="I02-PQ-D2r" id="X7J-NB-l0Y"/>
                         <outlet property="titleLabel" destination="Bmm-uv-eym" id="yqU-Pv-faG"/>
