More test data functionality, to test performance. It seems to perform fine.

--- a/books/Settings.storyboard
+++ b/books/Settings.storyboard
@@ -118,6 +118,28 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="YRV-N3-MsK">
+                                        <rect key="frame" x="0.0" y="243" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YRV-N3-MsK" id="9wp-F2-3SW">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Delete All Data" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lkz-dP-vfw">
+                                                    <rect key="frame" x="8" y="8" width="359" height="27.5"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                    <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="Lkz-dP-vfw" secondAttribute="trailing" constant="8" id="7rz-it-6hg"/>
+                                                <constraint firstItem="Lkz-dP-vfw" firstAttribute="leading" secondItem="9wp-F2-3SW" secondAttribute="leading" constant="8" id="9sT-UQ-9zg"/>
+                                                <constraint firstAttribute="bottom" secondItem="Lkz-dP-vfw" secondAttribute="bottom" constant="8" id="Z2c-jp-Vgi"/>
+                                                <constraint firstItem="Lkz-dP-vfw" firstAttribute="top" secondItem="9wp-F2-3SW" secondAttribute="top" constant="8" id="d0v-7k-spQ"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -127,6 +149,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="dAh-ED-Nhz"/>
+                    <connections>
+                        <outlet property="deleteAllDataCell" destination="YRV-N3-MsK" id="V5m-1C-ix3"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="I2D-fm-I5J" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
